syntax = "proto3";

option java_package = "com.example.composelambda";
option java_multiple_files = true;

message News {
  enum NewsType {
    BREAKING_NEWS = 0;
    PREMIUM_NEWS = 1;
  }
  NewsType type = 1;
  string title = 2;
  string description = 3;
  string image = 4;
}